[gd_scene load_steps=15 format=3 uid="uid://clhe4d02xrbqu"]

[ext_resource type="Script" path="res://entities/player/Player.gd" id="1_0qov8"]
[ext_resource type="PackedScene" uid="uid://b481xxg7cawxg" path="res://entities/Gun/gun.tscn" id="2_uxl7l"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="3_ckxac"]
[ext_resource type="PackedScene" uid="uid://drc81uvnh0r0u" path="res://Scenes/options_menu.tscn" id="4_tlgvh"]
[ext_resource type="Script" path="res://scripts/dead_menu.gd" id="5_nsjfv"]
[ext_resource type="Script" path="res://scripts/player_ui.gd" id="6_qgfsh"]
[ext_resource type="Texture2D" uid="uid://d1i2kdiwc61qc" path="res://textures/crosshair_fixed_v2.png" id="7_xybm5"]
[ext_resource type="Texture2D" uid="uid://26kbctuxn070" path="res://textures/crosshair_hit_v2.png" id="8_sxgpr"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_whugt"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ppkhq"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8rcxn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rflo"]
bg_color = Color(0.617454, 0.617455, 0.617454, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.223529)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r872a"]
bg_color = Color(0.355314, 0.355314, 0.355313, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.223529)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng4fv"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.223529)
shadow_size = 5
shadow_offset = Vector2(0, 4)

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_0qov8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01372, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_whugt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01372, 0)
shape = SubResource("ConvexPolygonShape3D_ppkhq")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67983, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="gun2" parent="Head/Camera3D" instance=ExtResource("2_uxl7l")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0.210901, -0.398335, -0.636837)

[node name="Aimray" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.45795)
target_position = Vector3(0, 0, -100)
collision_mask = 2
collide_with_areas = true

[node name="AimRayEnd" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101.5)

[node name="pause_menu_ui" type="CanvasLayer" parent="."]

[node name="pause_menu" type="Control" parent="pause_menu_ui"]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ckxac")

[node name="options_menu" parent="pause_menu_ui/pause_menu" instance=ExtResource("4_tlgvh")]
visible = false
z_index = 2
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu_ui/pause_menu"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -137.0
offset_right = 225.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="start_game" type="Button" parent="pause_menu_ui/pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_8rcxn")
theme_override_styles/hover = SubResource("StyleBoxFlat_5rflo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r872a")
theme_override_styles/normal = SubResource("StyleBoxFlat_ng4fv")
text = "RESUME GAME"

[node name="options" type="Button" parent="pause_menu_ui/pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_8rcxn")
theme_override_styles/hover = SubResource("StyleBoxFlat_5rflo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r872a")
theme_override_styles/normal = SubResource("StyleBoxFlat_ng4fv")
text = "OPTIONS"

[node name="exit_game" type="Button" parent="pause_menu_ui/pause_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_8rcxn")
theme_override_styles/hover = SubResource("StyleBoxFlat_5rflo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r872a")
theme_override_styles/normal = SubResource("StyleBoxFlat_ng4fv")
text = "MAIN MENU"

[node name="Label" type="Label" parent="pause_menu_ui/pause_menu"]
z_index = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_top = 30.0
offset_right = 121.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_font_sizes/font_size = 70
text = "PAUSE MENU
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="pause_menu_ui/pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.374139, 0.374139, 0.374139, 0.47451)

[node name="dead_menu_ui" type="CanvasLayer" parent="."]

[node name="dead_menu" type="Control" parent="dead_menu_ui"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_nsjfv")

[node name="VBoxContainer" type="VBoxContainer" parent="dead_menu_ui/dead_menu"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -35.0
offset_right = 225.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="restart" type="Button" parent="dead_menu_ui/dead_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_8rcxn")
theme_override_styles/hover = SubResource("StyleBoxFlat_5rflo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r872a")
theme_override_styles/normal = SubResource("StyleBoxFlat_ng4fv")
text = "RESTART
"

[node name="main_menu" type="Button" parent="dead_menu_ui/dead_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_8rcxn")
theme_override_styles/hover = SubResource("StyleBoxFlat_5rflo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r872a")
theme_override_styles/normal = SubResource("StyleBoxFlat_ng4fv")
text = "MAIN MENU"

[node name="Label" type="Label" parent="dead_menu_ui/dead_menu"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -201.0
offset_right = 174.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 8
theme_override_font_sizes/font_size = 70
text = "YOU DIED
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="dead_menu_ui/dead_menu"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.374139, 0.374139, 0.374139, 0.47451)

[node name="player_ui" type="CanvasLayer" parent="."]
layer = 0
script = ExtResource("6_qgfsh")

[node name="HP_label" type="Label" parent="player_ui"]
offset_left = 1694.0
offset_top = 31.0
offset_right = 1844.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 45
text = "100 HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="player_ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_xybm5")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="player_ui"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_sxgpr")
stretch_mode = 3

[connection signal="pressed" from="pause_menu_ui/pause_menu/VBoxContainer/start_game" to="pause_menu_ui/pause_menu" method="_on_start_game_pressed"]
[connection signal="pressed" from="pause_menu_ui/pause_menu/VBoxContainer/options" to="pause_menu_ui/pause_menu" method="_on_options_pressed"]
[connection signal="pressed" from="pause_menu_ui/pause_menu/VBoxContainer/exit_game" to="pause_menu_ui/pause_menu" method="_on_exit_game_pressed"]
[connection signal="pressed" from="dead_menu_ui/dead_menu/VBoxContainer/restart" to="dead_menu_ui/dead_menu" method="_on_restart_pressed"]
[connection signal="pressed" from="dead_menu_ui/dead_menu/VBoxContainer/main_menu" to="dead_menu_ui/dead_menu" method="_on_main_menu_pressed"]
